wandb/run-20220720_203519-2u9381da/files/output.log
Time to play:
Loading lists of data
graph data Data(x=[81, 1], edge_index=[2, 324], y=[81], pos=[81, 2])
  File "/home/dami/Inverse_GNN/apply_GS.py", line 28
    print(FEMout[0,:,;].squeeze(0).shape)
                     ^
SyntaxError: invalid syntax